--- a/resources/KeyScan.ui
+++ b/resources/KeyScan.ui
@@ -129,19 +129,6 @@
         <string>TextLabel</string>
        </property>
       </widget>
-      <widget class="QWidget" name="words_widget" native="true">
-       <property name="geometry">
-        <rect>
-         <x>50</x>
-         <y>90</y>
-         <width>1241</width>
-         <height>501</height>
-        </rect>
-       </property>
-       <property name="styleSheet">
-        <string notr="true"/>
-       </property>
-      </widget>
       <widget class="QWidget" name="horizontalLayoutWidget_13">
        <property name="geometry">
         <rect>
@@ -153,7 +140,7 @@
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
-         <widget class="QLabel" name="label_2">
+         <widget class="QLabel" name="time_label">
           <property name="text">
            <string>00:00</string>
           </property>
@@ -163,6 +150,16 @@
          </widget>
         </item>
        </layout>
+      </widget>
+      <widget class="QWidget" name="words_widget" native="true">
+       <property name="geometry">
+        <rect>
+         <x>40</x>
+         <y>100</y>
+         <width>1241</width>
+         <height>501</height>
+        </rect>
+       </property>
       </widget>
      </widget>
     </widget>
